calendar list tile text overlap fixed

--- a/src/pages/calendar/calendar.scss
+++ b/src/pages/calendar/calendar.scss
@@ -793,6 +793,7 @@ button.currentDataHighlights {
     width: 80%;
     position: relative;
     font-size: 12px;
+	white-space: normal;
     &:before {      
       content: '●';
       position: absolute;
